cart insert complete

--- a/src/main/resources/static/css/include/aside-best.css
+++ b/src/main/resources/static/css/include/aside-best.css
@@ -4,6 +4,11 @@ main > aside {
     height: 100%;
 }
 
+@media screen and (max-width: 1860px) {
+    .best {
+       display: none;
+    }
+}
 
 /* 베스트 배너 */
 .best {
