--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -33,7 +33,7 @@
                 <span> > </span>
                 <span>패션·의류·뷰티</span>
                 <span> > </span>
-                <span> 남성의류 </span>
+                <strong> 남성의류 </strong>
             </p>
         </nav>
 
