--- a/src/main/resources/static/css/my/modal.css
+++ b/src/main/resources/static/css/my/modal.css
@@ -409,3 +409,9 @@
      margin-bottom: 3px;
      line-height: 30px;
  }
+ .bannerdate{
+     width: 120px;
+ }
+.bannerdate2{
+    width: 50px;
+}
