--- a/src/main/resources/templates/admin/coupon/issued.html
+++ b/src/main/resources/templates/admin/coupon/issued.html
@@ -25,9 +25,9 @@
       <div>
         <form action="/admin/coupon/list" class="search_bar">
           <select name="type">
-            <productOption value="orderNo">발급번호</productOption>
-            <productOption value="orderId">쿠폰번호</productOption>
-            <productOption value="orderName">쿠폰명</productOption>
+            <Option value="orderNo">발급번호</Option>
+            <Option value="orderId">쿠폰번호</Option>
+            <Option value="orderName">쿠폰명</Option>
           </select>
           <input class="searchInput" type="text" name="keyword">
           <input type="hidden" name="prodSeller" value="ADMIN" readonly>
