--- a/src/main/resources/templates/admin/cs/notice/write.html
+++ b/src/main/resources/templates/admin/cs/notice/write.html
@@ -19,7 +19,7 @@
       <p>HOME > 고객센터 > 공지사항</p>
     </div>
     <article class="qna_article_write">
-      <form>
+      <form method="post">
         <table>
           <tr>
             <td>문의유형</td>
@@ -34,13 +34,13 @@
           <tr>
             <td>제목</td>
             <td>
-              <input type="text" name="qnaTitle" placeholder="제목을 입력하세요." required/>
+              <input type="text" name="title" placeholder="제목을 입력하세요." required/>
             </td>
           </tr>
           <tr>
             <td>내용</td>
             <td>
-              <textarea name="qnaContent" placeholder="내용을 입력하세요." required></textarea>
+              <textarea name="content" placeholder="내용을 입력하세요." required></textarea>
             </td>
           </tr>
         </table>
