--- a/src/main/resources/templates/admin/cs/faq/list.html
+++ b/src/main/resources/templates/admin/cs/faq/list.html
@@ -8,6 +8,7 @@
 <th:block layout:fragment="css">
     <link rel="stylesheet" th:href="@{/css/admin/cs/faq/list.css}" />
 </th:block>
+
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
 </th:block>
@@ -25,27 +26,27 @@
             <div class="select-container">
                 <div>
                     <select name="type" onchange="firstOption()">
-                        <productOption>1차선택</productOption>
-                        <productOption value="user">회원</productOption>
-                        <productOption value="coupon">쿠폰/이벤트</productOption>
-                        <productOption value="order">주문/결제</productOption>
-                        <productOption value="delivery">배송</productOption>
-                        <productOption value="cancel">취소/반품/환불</productOption>
-                        <productOption value="travel">여행/숙박/항공</productOption>
-                        <productOption value="safe">안전결제</productOption>
+                        <option>1차선택</option>
+                        <option value="user">회원</option>
+                        <option value="coupon">쿠폰/이벤트</option>
+                        <option value="order">주문/결제</option>
+                        <option value="delivery">배송</option>
+                        <option value="cancel">취소/반품/환불</option>
+                        <option value="travel">여행/숙박/항공</option>
+                        <option value="safe">안전결제</option>
                     </select>
                 </div>
                 <div>
                     <select name="type" onchange="redirectToCateType()">
-                        <productOption>2차선택</productOption>
-                        <productOption value="regi">가입</productOption>
-                        <productOption value="leave">탈퇴</productOption>
-                        <productOption value="info">회원정보</productOption>
-                        <productOption value="login">로그인</productOption>
-
+                        <option>2차선택</option>
+                        <option value="regi">가입</option>
+                        <option value="leave">탈퇴</option>
+                        <option value="info">회원정보</option>
+                        <option value="login">로그인</option>
                     </select>
                 </div>
             </div>
+
             <table class="admingraph">
                 <tr class="admin_title">
                     <th><input type="checkbox" name="allCheck" /></th>
@@ -58,53 +59,33 @@
                     <th>관리</th>
                 </tr>
 
-                <tr class="admin_list">
-                    <td><input type="checkbox" value="noticeNo" name="RowCheck" /></td>
-                    <td>10</td>
-                    <td style="white-space: nowrap;">[유형선택]</td>
-                    <td style="white-space: nowrap;">[유형선택]</td>
+                <!-- FAQ 목록 동적 처리 -->
+                <tr class="admin_list" th:each="faq, iterStat : ${faqs}">
+                    <td><input type="checkbox" th:value="${faq.id}" name="RowCheck" /></td>
+                    <td th:text="${iterStat.count}">1</td>
+                    <td th:text="${faq.type1}">1차유형</td>
+                    <td th:text="${faq.type2}">2차유형</td>
                     <td style="text-align: left">
                         <span>
-                            <a th:href="@{/admin/cs/faq/view}">
-                                <span style="white-space: nowrap;">
-                                    개인회원과 법인회원에 차이가 있나요 ?
-                                </span>
+                            <a th:href="|@{/admin/cs/faq/view/}${faq.id}|">
+                                <span th:text="${faq.title}" style="white-space: nowrap;">질문 제목</span>
                             </a>
                         </span>
                     </td>
-                    <td>120</td>
-                    <td style="white-space: nowrap;">2024-10-14</td>
+                    <td th:text="${faq.views}">120</td>
+                    <td th:text="${#temporals.format(faq.createdAt, 'yyyy-MM-dd')}">2024-10-14</td>
                     <td style="line-height: 20px">
-                        <a onclick="modifyProdStatus()" class="cs_delete-btn">[삭제]</a>
+                        <a th:href="@{/admin/cs/faq/delete(id=${faq.id})}" class="cs_delete-btn">[삭제]</a>
                         <br>
-                        <a href="" class="cs_modify-btn">[수정]</a>
+                        <a th:href="@{/admin/cs/faq/edit(id=${faq.id})}" class="cs_modify-btn">[수정]</a>
                     </td>
                 </tr>
-
             </table>
-            <a class="delete_btn">선택삭제</a>
+
+            <a href="javascript:void(0);" class="delete_btn" onclick="deleteSelectedFaqs()">선택삭제</a>
             <a th:href="@{/admin/cs/faq/write}" class="registration_btn">작성하기</a>
 
-            <div class="pagingBox">
-                <div class="pagingList">
-
-                    <!-- 이전 버튼 -->
-                    <a href="#" class="prev"><</a>
-
-                    <!-- 페이지 링크 -->
-                    <a href="#">1</a>
-                    <a href="#" class="active">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">5</a>
-
-                    <!-- 다음 버튼 -->
-                    <a href="#" class="next">></a>
-                </div>
-            </div>
-
         </section>
-
     </div>
 </div>
 </html>
